--- a/requirements.txt
+++ b/requirements.txt
@@ -1,104 +1,23 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.15
-aiosignal==1.4.0
-appdirs==1.4.4
 arrow==1.3.0
-async-timeout==5.0.1
-attrs==25.3.0
-backports-datetime-fromisoformat==2.0.3
-blinker==1.9.0
-bottle==0.12.25
 cachetools==5.3.3
-certifi==2024.2.2
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-contourpy==1.2.0
-cuda-python==12.3.0
-cycler==0.12.1
-decorator==4.4.2
-docker-pycreds==0.4.0
-docopt==0.6.2
-fastjsonschema==2.21.1
-filelock==3.13.1
 Flask==3.1.1
-fonttools==4.49.0
-frozenlist==1.7.0
-fsspec==2024.2.0
-gitdb==4.0.11
-GitPython==3.1.42
-idna==3.6
 ImageHash==4.3.1
-imageio==2.34.0
-imageio-ffmpeg==0.4.9
-imbalanced-learn==0.12.0
-itsdangerous==2.2.0
-Jinja2==3.1.3
-joblib==1.3.2
-jsonschema==4.25.0
-jsonschema-specifications==2025.4.1
-jupyter_core==5.8.1
-kiwisolver==1.4.5
-lazy_loader==0.3
-lightning-utilities==0.10.1
-MarkupSafe==2.1.5
 marshmallow==4.0.0
 matplotlib==3.8.3
 moviepy==1.0.3
-mpmath==1.3.0
-multidict==6.6.3
-nbformat==5.10.4
-network==0.1
-networkx==3.2.1
 numpy==1.26.4
 opencv-python==4.9.0.80
-packaging==23.2
 pandas==2.2.0
-pigar==2.1.7
 pillow==10.2.0
-pipreqs==0.4.13
-platformdirs==4.3.8
-proglog==0.1.10
-propcache==0.3.2
-protobuf==4.25.3
-psutil==5.9.8
-pyarrow==15.0.0
-pyasn1==0.5.1
-pycparser==2.21
-pyparsing==3.1.1
 PySimpleGUI==5.0.3
-python-dateutil==2.8.2
-pytz==2024.1
-PyWavelets==1.5.0
-pywin32==311
-PyYAML==6.0.1
-referencing==0.36.2
-requests==2.31.0
-rpds-py==0.26.0
-rsa==4.9
 scikit-image==0.22.0
 scikit-learn==1.4.1.post1
 scipy==1.12.0
-sentry-sdk==1.40.6
-setproctitle==1.3.3
-six==1.16.0
-smmap==5.0.1
 sounddevice==0.4.6
-sympy==1.12
-threadpoolctl==3.3.0
-tifffile==2024.2.12
-torch==2.2.0+cu121
-torchaudio==2.2.0+cu121
+torch~=2.7.1+cu128
 torchmetrics==1.3.1
-torchvision==0.17.0
+torchvision~=0.22.1+cu128
 tqdm==4.66.2
-traitlets==5.14.3
-types-python-dateutil==2.8.19.20240106
-typing_extensions==4.9.0
-tzdata==2024.1
-urllib3==2.2.0
-wandb==0.16.3
 Werkzeug==3.1.3
-yarg==0.1.9
-yarl==1.20.1
+
+mlflow~=3.1.4
