Added cmd line run configurations, refactored datasets out of /lib/, added dataset metadata and fixed a number of issues.
Former-commit-id: d8f7f234ddcad7efe58394cb459a711bf2a15d10

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ lib/datasets/ascii_c64/data.hold/*
 lib/datasets/ascii_amstrad_cpc/data/*
 lib/datasets/ubuntu_mono/data/*
 lib/datasets/unscii_8x8/data/*
+datasets/*/processed/train/*
+datasets/*/processed/test/*
+datasets/*/processed/archive/*
 
 /logs/
 /data/
