--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ lib/datasets/ascii_amstrad_cpc/data/*
 lib/datasets/ubuntu_mono/data/*
 lib/datasets/unscii_8x8/data/*
 datasets/*/processed/*.csv
+datasets/*/processed/*/*.csv
+datasets/*/processed/*.txt
+datasets/*/processed/*/*.txt
 
 /logs/
 /data/
