Some more dataset related changes and refactorings.
Former-commit-id: 0007d7b4b22009e773c9af52bf6417289a25cadf

--- a/datasets/ascii_c64/metadata.yaml
+++ b/datasets/ascii_c64/metadata.yaml
@@ -13,6 +13,7 @@ features:
   name: label
 license: MIT
 name: ascii_c64
+num_classes: 254
 source: https://github.com/garciahurtad/ascii_movie_pytorch
 statistics:
   class_distribution: n/a
