Added image augmentation script. Committing current version of ascii_c64 dataset - 0.0.9
Former-commit-id: 8d23f47cc651cbbd1fbf948904ff7ec878dbd942

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ datasets/*/processed/*.csv
 datasets/*/processed/*/*.csv
 datasets/*/processed/*.txt
 datasets/*/processed/*/*.txt
+datasets/*/processed/*
 
 /logs/
 /data/
