New augmented dataset version 0.0.11 with 2,034,299 samples (orig images x5)
Former-commit-id: 402a7bef3cefe79647510809988dd5a177e26448

--- a/datasets/ascii_c64/metadata.yaml
+++ b/datasets/ascii_c64/metadata.yaml
@@ -1,5 +1,5 @@
 cmdline: python generate_training_data.py ['--invert']
-created: 2025-08-07_02:53:31
+created: 2025-08-08_18:27:56
 description: ASCII art dataset generated from c64.png character set
 features:
 - description: 8x8 grayscale character patches
@@ -17,7 +17,7 @@ num_classes: 254
 source: https://github.com/garciahurtad/ascii_movie_pytorch
 statistics:
   class_distribution: n/a
-  num_samples: 0
-  num_source_files: 103
+  num_samples: 2034299
+  num_source_files: 515
 train_split: n/a
-version: 0.0.9
+version: 0.0.11
