--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ datasets/*/processed/*/*.csv
 datasets/*/processed/*.txt
 datasets/*/processed/*/*.txt
 datasets/*/processed/*
+web/static/charpeg/*
 
 /logs/
 /data/
